--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 /********************
  * CONFIG + STATE   *
  ********************/
-const GAS_ENDPOINT = 'PASTE_YOUR_APPS_SCRIPT_WEB_APP_URL_HERE';
+const GAS_ENDPOINT = 'https://script.google.com/macros/s/AKfycbwn4Qwj9L8NbvoG1vhKIc_ZY_2f3wV7j-P1TLoFK5Z5R9cct2iZNNdzmvynypncwRBT/exec';
 const DRAFT_KEY = 'career_v6';
 
 // Teacher roster (students see names only)
