--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 /********************
  * CONFIG + STATE   *
  ********************/
-const GAS_ENDPOINT = 'PASTE_YOUR_APPS_SCRIPT_WEB_APP_URL_HERE';
+const GAS_ENDPOINT = 'https://script.google.com/macros/s/AKfycbzO1IooTr1pSD-u4wzccMiad6FcQFtVYUkCQ5LPJJ9ZkGRxIjBbm4VzKlL3FAcaF5dO/exec';
 const DRAFT_KEY = 'career_v7';
 
 // Teacher roster (students see names only)
